# ChangeLog for dev-libs/ntl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/ntl/ChangeLog,v 1.25 2014/06/19 13:08:44 jauhien Exp $

*ntl-9.3.0 (10 Jul 2015)

  10 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +ntl-9.3.0.ebuild, -files/ntl-9.2.0-singular.patch,
  -files/ntl-9.2.0-sp_arith.patch, -ntl-9.2.0.ebuild:
  Bump to 9.3.0. Look Ma, no sage patch anymore.

*ntl-9.2.0 (09 Jul 2015)

  09 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/ntl-9.2.0-sage-callback.patch,
  +files/ntl-9.2.0-sanitize-makefile.patch, +files/ntl-9.2.0-singular.patch,
  +files/ntl-9.2.0-sp_arith.patch, +ntl-9.2.0.ebuild, ntl-6.2.1.ebuild:
  Bump to ntl 9.2.0 which is to land in sage 6.8, included appropriate sage
  patch. Make repoman happy.

  19 Jun 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +files/ntl-5.5.2-shared-r1.patch:
  fix bug #513660

*ntl-6.1.0 (16 Jun 2014)

  16 Jun 2014; Jauhien Piatlicki <jauhien@gentoo.org> +ntl-6.1.0.ebuild:
  version bump, bug #507046, imported from sage-on-gentoo, thanks to François
  Bissey

*ntl-6.0.0 (10 Mar 2014)

  10 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org>
  +files/ntl-6.0.0-sage-tools.patch, +files/ntl-6.0.0-singular.patch,
  +ntl-6.0.0.ebuild:
  Version bump, mostly taken from sage-on-gentoo

  24 Feb 2011; Sébastien Fabbro <bicatali@gentoo.org> -ntl-5.3.ebuild,
  -ntl-5.3.2.ebuild, -ntl-5.4-r1.ebuild, -files/ntl-5.4-endless_testrun.patch,
  ntl-5.5.2.ebuild:
  Added static-libs flag and downgrade O3 and above flags to O2 (bug #356087)

  25 Dec 2010; Fabian Groffen <grobian@gentoo.org> ntl-5.5.2.ebuild,
  files/ntl-5.5.2-shared.patch:
  Bump EAPI=3 for Prefix, add support for Darwin, marked ~x86-linux,
  ~amd64-linux and ~ppc-macos, bug #341989

  09 Feb 2010; Pacho Ramos <pacho@gentoo.org> ntl-5.5.2.ebuild:
  amd64 stable, bug 300655

  19 Jan 2010; nixnut <nixnut@gentoo.org> ntl-5.5.2.ebuild:
  ppc stable #300655
