@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/ntl/ChangeLog,v 1.25 2014/06/19 13:08:44 jauhien Exp $
 
+  10 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
+  ntl-9.3.0.ebuild:
+  cleaning all the "die" that are un-needed in EAPI 4 and over.
+
 *ntl-9.3.0 (10 Jul 2015)
 
   10 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
